--- a/space_monitor/src/scss/_override-variables.scss
+++ b/space_monitor/src/scss/_override-variables.scss
@@ -29,7 +29,7 @@ $brand-danger:          #d9534f !default;
 //** Background color for `<body>`.
 $body-bg:               $gray-base;
 //** Global text color on `<body>`.
-$text-color:            $gray-lighter;
+$text-color:            #ffffff;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
